@@ -15,8 +15,6 @@ Category:       Development
 
 Extra-Source-Files: src/Language/C/Parser/Lexer.x
                     src/Language/C/Parser/Parser.y
-                    test/CPP.hs
-                    test/CTest.hs
 Flag splitBase
     Description: Choose the new smaller, split-up base package.
 
